update package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ahulxt/ThumbCut ",
+  "name": "ahulxt/thumbCut ",
   "description": "a plugin to create thumbnail",
   "version": "1.0.0",
   "keywords": [
