--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,7 @@
 {
   "name": "ahulxt/thumbcut",
   "description": "a plugin to create thumbnail",
-  "keywords": [
-    "thumb"
-  ],
+  "keywords": ["thumb"],
   "license": "MIT",
   "type": "library",
   "authors": [
@@ -16,7 +14,6 @@
   "require": {
     "php": ">=5.3.0"
   },
-  "suggest": ["PHP GD extension is necessary"],
   "autoload": {
     "psr-4": {
       "Ahulxt\\": "src"
